fixed house too small in wxga

--- a/wp-content/themes/statybulygmuo/assets/sass/sections/_about.scss
+++ b/wp-content/themes/statybulygmuo/assets/sass/sections/_about.scss
@@ -110,7 +110,7 @@
             width: 500px;
         }
 
-        @include media-breakpoint-down(lg) {
+        @include media-breakpoint-down(md) {
             right: 0;
             width: 400px;
             bottom: -10px;
